src/c/dynamics.h

/**
 * @brief Iteration statistics returned by nonlinear solver routines.
 */
typedef struct {
    /**
     * True when convergence was detected from solution changes.
    */
    bool converge_on_chng;
    /**
     * True when convergence was detected from the function value.
    */
    bool converge_on_fcn;
    /**
     * True when convergence was detected from a zero difference.
    */
    bool converge_on_zero_diff;
    /**
     * Number of function evaluations.
    */
    int fcn_count;
    /**
     * Number of gradient evaluations.
    */
    int gradient_count;
    /**
     * Number of nonlinear iterations.
    */
    int iter_count;
    /**
     * Number of Jacobian evaluations.
    */
    int jacobian_count;
} c_iteration_behavior;
/**
 * @brief Opaque handle to a closed-loop mechanism. Create handles with
 * `c_create_parallel_linkage` or `c_create_planar_linkage`, and release them
 * with `c_free_mechanism`.
 */
typedef void* c_mechanism;
/**
 * Evaluate mechanism constraint equations.
 * @param obj Mechanism handle.
 * @param n Configuration length.
 * @param q Configuration values.
 * @param nc Constraint count.
 * @param f Output constraints.
 */
void c_mechanism_constraints(c_mechanism obj, int n, const double *q, int nc,
    double *f);
/**
 * Evaluate the mechanism constraint Jacobian.
 * @param obj Mechanism handle.
 * @param n Configuration length.
 * @param q Configuration values.
 * @param jac Output Jacobian.
 * @param ldj Leading dimension of jac.
 */
void c_mechanism_constraint_jacobian(c_mechanism obj, int n, const double *q,
    double *jac, int ldj);
/**
 * Solve for a complete mechanism configuration.
 * @param obj Mechanism handle.
 * @param na Number of actuated variables.
 * @param qa Actuated variables.
 * @param n Configuration length.
 * @param q Configuration updated by the solver.
 * @param ib Output iteration statistics.
 */
void c_mechanism_solve_configuration(c_mechanism obj, int na, const double *qa,
    int n, double *q, c_iteration_behavior *ib);
/**
 * Evaluate forward kinematics for a mechanism.
 * @param obj Mechanism handle.
 * @param na Number of actuated variables.
 * @param qa Actuated variables.
 * @param T Output end-effector transform.
 * @param ldt Leading dimension of T.
 * @param ib Output iteration statistics.
 */
void c_mechanism_forward_kinematics(c_mechanism obj, int na, const double *qa,
    double *T, int ldt, c_iteration_behavior *ib);
/**
 * Evaluate a mechanism Jacobian.
 * @param obj Mechanism handle.
 * @param na Number of actuated variables.
 * @param qa Actuated variables.
 * @param jac Output Jacobian.
 * @param ldj Leading dimension of jac.
 */
void c_mechanism_jacobian(c_mechanism obj, int na, const double *qa, 
    double *jac, int ldj);
/**
 * Solve mechanism inverse kinematics.
 * @param obj Mechanism handle.
 * @param trg Target transform.
 * @param ldt Leading dimension of trg.
 * @param na Number of actuated variables.
 * @param qa Actuated variables, updated by the solver.
 * @param ib Output iteration statistics.
 */
void c_mechanism_inverse_kinematics(c_mechanism obj, const double *trg, int ldt,
    int na, double *qa, c_iteration_behavior *ib);