src/c/dynamics_c_parallel_linkage.f90


! ------------------------------------------------------------------------------
subroutine c_mechanism_constraints(obj, n, q, nc, f) &
    bind(C, name = "c_mechanism_constraints")
    type(c_ptr), intent(in), value :: obj
    integer(c_int), intent(in), value :: n, nc
    real(c_double), intent(in) :: q(n)
    real(c_double), intent(out) :: f(nc)

    class(kinematic_mechanism), pointer :: mech

    mech => get_mechanism(obj)
    if (.not.associated(mech)) error stop DYN_NULL_POINTER_ERROR
    f = mech%constraints(q)
end subroutine

! ------------------------------------------------------------------------------
subroutine c_mechanism_constraint_jacobian(obj, n, q, jac, ldj) &
    bind(C, name = "c_mechanism_constraint_jacobian")
    type(c_ptr), intent(in), value :: obj
    integer(c_int), intent(in), value :: n, ldj
    real(c_double), intent(in) :: q(n)
    real(c_double), intent(out) :: jac(ldj, n)

    integer(int32) :: nc
    class(kinematic_mechanism), pointer :: mech

    mech => get_mechanism(obj)
    if (.not.associated(mech)) error stop DYN_NULL_POINTER_ERROR
    nc = mech%get_constraint_count()
    if (ldj < nc) error stop DYN_INVALID_INPUT_ERROR
    jac(1:nc,1:n) = mech%constraint_jacobian(q)
end subroutine

! ------------------------------------------------------------------------------
subroutine c_mechanism_solve_configuration(obj, na, qa, n, q, ib) &
    bind(C, name = "c_mechanism_solve_configuration")
    type(c_ptr), intent(in), value :: obj
    integer(c_int), intent(in), value :: na, n
    real(c_double), intent(in) :: qa(na)
    real(c_double), intent(out) :: q(n)
    type(c_iteration_behavior), intent(out) :: ib

    class(kinematic_mechanism), pointer :: mech
    type(iteration_behavior) :: fib

    mech => get_mechanism(obj)
    if (.not.associated(mech)) error stop DYN_NULL_POINTER_ERROR
    q = mech%solve_configuration(qa, ib = fib)
    ib = fib
end subroutine

! ------------------------------------------------------------------------------
subroutine c_mechanism_forward_kinematics(obj, na, qa, T, ldt, ib) &
    bind(C, name = "c_mechanism_forward_kinematics")
    type(c_ptr), intent(in), value :: obj
    integer(c_int), intent(in), value :: na, ldt
    real(c_double), intent(in) :: qa(na)
    real(c_double), intent(out) :: T(ldt, 4)
    type(c_iteration_behavior), intent(out) :: ib

    class(kinematic_mechanism), pointer :: mech
    type(iteration_behavior) :: fib

    if (ldt < 4) error stop DYN_INVALID_INPUT_ERROR
    mech => get_mechanism(obj)
    if (.not.associated(mech)) error stop DYN_NULL_POINTER_ERROR
    T(1:4,1:4) = mech%forward_kinematics(qa, ib = fib)
    ib = fib
end subroutine

! ------------------------------------------------------------------------------
subroutine c_mechanism_jacobian(obj, na, qa, jac, ldj) &
    bind(C, name = "c_mechanism_jacobian")
    type(c_ptr), intent(in), value :: obj
    integer(c_int), intent(in), value :: na, ldj
    real(c_double), intent(in) :: qa(na)
    real(c_double), intent(out) :: jac(ldj, na)

    integer(int32) :: nd
    class(kinematic_mechanism), pointer :: mech

    mech => get_mechanism(obj)
    if (.not.associated(mech)) error stop DYN_NULL_POINTER_ERROR
    nd = mech%get_space_dimension()
    if (ldj < nd) error stop DYN_INVALID_INPUT_ERROR
    jac(1:nd,1:na) = mech%jacobian(qa)
end subroutine

! ------------------------------------------------------------------------------
subroutine c_mechanism_inverse_kinematics(obj, trg, ldt, na, qa, ib) &
    bind(C, name = "c_mechanism_inverse_kinematics")
    type(c_ptr), intent(in), value :: obj
    integer(c_int), intent(in), value :: ldt, na
    real(c_double), intent(in) :: trg(ldt, 4)
    real(c_double), intent(out) :: qa(na)
    type(c_iteration_behavior), intent(out) :: ib

    class(kinematic_mechanism), pointer :: mech
    type(iteration_behavior) :: fib

    if (ldt < 4) error stop DYN_INVALID_INPUT_ERROR
    mech => get_mechanism(obj)
    if (.not.associated(mech)) error stop DYN_NULL_POINTER_ERROR
    qa = mech%inverse_kinematics(trg(1:4,1:4), ib = fib)
    ib = fib
end subroutine

end module
